# scribe

./: .gitignore  LICENSE  README.md  pyproject.toml  scribe_config.py
scribe/: __init__.py  dependencies.py  server.py
scribe-ui/: index.html  package-lock.json  package.json  vite.config.js
scribe-ui/public/: index.html
scribe-ui/src/: App.jsx  index.js  main.jsx
scribe-ui/src/components/: CreateMeeting.js  ErrorAlert.jsx  MeetingCard.js  MeetingList.js  MeetingTranscriptPage.js
scribe-ui/src/services/: api.js
scribe-ui/src/styles/: base.css
scribe/meetings/: api.py  schema.py
scribe_agent/: __init__.py  agent.py  recorder.py  transcription.py
